# motherd

./: .gitignore  CODEOWNERS  ChangeLog.md  Makefile.am  NEWS.md  README.md  configure.ac
configlib/: substvars.sh.in
docs/: ProcessFlow.md  ProcessFlow.txt  README.md
docs/design/: README.md
lib/: Makefile.am
sbin/: Makefile.am
share/: Makefile.am
